--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,10 @@
-sudo: required
-services:
-  - docker
-
-before_install:
-  - docker build -t mnaveensmn/docker-react -f Dockerfile.dev .
-
-script:
-  - docker run -e CI=true mnaveensmn/docker-react npm run test
+version: 2
+jobs:
+ build:
+   machine: true
+   steps:
+     - checkout
+     - run: docker build -t mnaveensmn/docker-react -f Dockerfile.dev .
+     - run: docker run -e CI=true mnaveensmn/docker-react npm run test
+     - setup_remote_docker:
+          version: 19.03.13
